Added some CSS styles

--- a/basics/index.html
+++ b/basics/index.html
@@ -11,22 +11,24 @@
 
    <nav class="navbar">
         <div class="navdiv">
-            <div class="logo"><h2 >ADITYA MALLICK</h2></div>
+            <div class="logo"><h2>ADITYA MALLICK</h2></div>
                 <ul class="links">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Skills</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">More</a></li>
+                    <li><button></button><a href="#">Home</a></button></li>
+                    <li><button></button><a href="#">Skills</a></button></li>
+                    <li><button></button><a href="#">Projects</a></button></li>
+                    <li><button></button><a href="#">More</a></button></li>
                 </ul>
         </div>
    </nav>
 
-    <div class="header">
-        <p>Aditya Mallick</p>
-    </div>
-
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
         Autem et voluptatem accusantium dolores sed debitis natus 
         provident unde perspiciatis minus, porro illum temporibus.</p>
+
+        <div style="height: 100vh;">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia facilis voluptas nihil ea, modi, quia nisi voluptatibus saepe aliquid deserunt consequatur sunt sequi aut quasi, eligendi velit repudiandae blanditiis aspernatur.
+            </p>
+        </div>
 </body>
 </html>
