--- a/basics/index.html
+++ b/basics/index.html
@@ -11,7 +11,7 @@
 
    <nav class="navbar">
         <div class="navdiv">
-            <div class="logo"><h2>ADITYA MALLICK</h2></div>
+            <div class="logo"><h2>ADITYA</h2></div>
                 <ul class="links">
                     <li><button><a href="#">Home</a></button></li>
                     <li><button><a href="#">Skills</a></button></li>
@@ -24,7 +24,13 @@
 
    <section class="first">
         
-   
+   <div class="intro">
+        <p id="hello">Hey there,</p>
+        <span id="self">
+        I am <span id="name">Aditya Mallick.</span> 
+        </span>
+        <p id="prof">DJANDO DEVELOPER</p>
+   </div>
     <img src="My Ghibli PP.jpg" alt="profilepic" class="pp">
     
    </section>
