--- a/basics/index.html
+++ b/basics/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aditya Mallick | Portfolio</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 <link rel="stylesheet" href="style.css">
+<script src="https://kit.fontawesome.com/5d8ce96b02.js" crossorigin="anonymous"></script>
 
 <body>
 
@@ -16,17 +18,10 @@
                 <h2>ADITYA</h2>
             </div>
             <ul class="links">
-                <li><button><a href="#">Home</a></button></li>
+                <li><button><a href="#">About</a></button></li>
                 <li><button><a href="#">Skills</a></button></li>
                 <li><button><a href="#">Projects</a></button></li>
                 <li><button><a href="#">Experience</a></button></li>
-                <li class="container"><button><a href="#">Contact</a></button>
-                    <div class="content">
-                        <a href="https://github.com/Adittyaaa-codes" target="_blank">GitHub</a>
-                        <a href="https://www.linkedin.com/in/aditya-mallick-7836692b6/" target="_blank">LinkedIn</a>
-                        <a href="">Instagram</a>
-                    </div>
-                </li>
             </ul>
         </div>
     </nav>
@@ -39,14 +34,26 @@
                 I am <span id="name">Aditya Mallick.</span>
             </span>
             <p id="prof">DJANGO DEVELOPER</p>
+
+            <br>
+            
+            <a href="" target="_blank"><i class="bi bi-github"></i></a>
+            <a href="" target="_blank"><i class="bi bi-linkedin" style="color: #0077B5"></i></a>
+            <a href="" target="_blank"><i class="bi bi-twitter-x" style="color: white"></i></a>
+
         </div>
-        <img src="My Ghibli PP.jpg" alt="profilepic" class="pp">
+
+        <a href="AdityaDP.jpg" target="blank"><img src="AdityaDP.jpg" alt="profilepic" class="pp"></a>
 
     </section>
 
+    <div class="skills">
+        <H2>SKILLS</H2>
+    </div>
 
+    <div class="skdisplay">
 
-
+    </div>
 
 
 </body>
