--- a/basics/index.html
+++ b/basics/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar">
         <div class="navdiv">
             <div class="logo">
-                <h2>ADITYA</h2>
+                <i class="bi bi-anthropic" style="color: rgb(229, 233, 220);"></i><span style="font-size: 35px;">DITYA</span>
             </div>
             <ul class="links">
                 <li><button><a href="#">About</a></button></li>
@@ -31,14 +31,14 @@
         <div class="intro">
             <p id="hello">Hey there,</p>
             <span id="self">
-                I am <span id="name">Aditya Mallick.</span>
+                I am <span id="name">Aditya Mallick</span>
             </span>
             <p id="prof">DJANGO DEVELOPER</p>
 
             <br>
-            
-            <a href="" target="_blank"><i class="bi bi-github"></i></a>
-            <a href="" target="_blank"><i class="bi bi-linkedin" style="color: #0077B5"></i></a>
+
+            <a href="https://github.com/Adittyaaa-codes" target="_blank"><i class="bi bi-github"></i></a>
+            <a href="https://www.linkedin.com/in/aditya-mallick-7836692b6/" target="_blank"><i class="bi bi-linkedin" style="color: #0077B5"></i></a>
             <a href="" target="_blank"><i class="bi bi-twitter-x" style="color: white"></i></a>
 
         </div>
@@ -46,6 +46,8 @@
         <a href="AdityaDP.jpg" target="blank"><img src="AdityaDP.jpg" alt="profilepic" class="pp"></a>
 
     </section>
+
+    <hr style="max-width: 90vw;">
 
     <div class="skills">
         <H2>SKILLS</H2>
@@ -55,6 +57,25 @@
 
     </div>
 
+
+
+    <div class="project">
+        <H2>PROJECTS</H2>
+    </div>
+
+    <div class="prdisplay">
+
+    </div>
+
+
+
+    <div class="ex">
+        <H2>EXPERIENCES</H2>
+    </div>
+
+    <div class="exdisplay">
+
+    </div>
 
 </body>
 
