--- a/basics/index.html
+++ b/basics/index.html
@@ -15,16 +15,48 @@
     <nav class="navbar">
         <div class="navdiv">
             <div class="logo">
-                <i class="bi bi-anthropic" style="color: rgb(229, 233, 220);"></i><span style="font-size: 35px;">DITYA</span>
+                <i class="bi bi-anthropic" style="color: rgb(229, 233, 220);"></i><span
+                    style="font-size: 35px;">DITYA</span>
             </div>
             <ul class="links">
-                <li><button><a href="#">About</a></button></li>
+                <li><button><a href="#about" class="about-btn">About</a></button></li>
                 <li><button><a href="#">Skills</a></button></li>
                 <li><button><a href="#">Projects</a></button></li>
                 <li><button><a href="#">Experience</a></button></li>
             </ul>
         </div>
     </nav>
+
+    <div id="about" class="about-overlay">
+        <a href="#" class="close-btn">×</a>
+        <div class="about-content">
+            <!-- <h2 style="font-size:xx-large; text-decoration:underline;">About Me</h2> -->
+            <pre style="font-size: x-large;">👋 Hi, I'm Aditya Mallick
+🎓 A second-year Computer Science Engineering student and a passionate Django Developer with a strong
+interest in AI and Full-Stack Development.
+
+💡 I love exploring new technologies, solving real-world problems, and constantly pushing my boundaries
+as a developer. I'm currently seeking opportunities to gain hands-on experience through internships or
+collaborative projects where I can learn, grow, and contribute.
+
+🚀 What drives me?
+A deep curiosity, a never-ending enthusiasm to learn, and the desire to build meaningful tech that makes
+an impact.
+
+🔧 Tech Skills:-
+🐍 Python
+🌐 Django
+🖥️ HTML & CSS
+🗃️ SQL
+☕ Java
+💻 C/C++
+
+Thank you for visiting my profile!
+I truly appreciate your time and interest. I’m always open to connecting, collaborating, or learning from fellow developers
+and industry professionals. Let’s build something amazing together!
+</pre>
+        </div>
+    </div>
 
     <section class="first">
 
@@ -38,7 +70,8 @@
             <br>
 
             <a href="https://github.com/Adittyaaa-codes" target="_blank"><i class="bi bi-github"></i></a>
-            <a href="https://www.linkedin.com/in/aditya-mallick-7836692b6/" target="_blank"><i class="bi bi-linkedin" style="color: #0077B5"></i></a>
+            <a href="https://www.linkedin.com/in/aditya-mallick-7836692b6/" target="_blank"><i class="bi bi-linkedin"
+                    style="color: #0077B5"></i></a>
             <a href="" target="_blank"><i class="bi bi-twitter-x" style="color: white"></i></a>
 
         </div>
@@ -54,7 +87,11 @@
     </div>
 
     <div class="skdisplay">
+        <h5><span class="dot yellow"></span> BASIC | <span class="dot green"></span> STRONG</h5>
 
+        <h2 style="padding-left: 70px ; color:antiquewhite">PROGRAMMING LANGUAGES</h2>
+        <hr style="width: 90vw;">
+        
     </div>
 
 
