--- a/basics/index.html
+++ b/basics/index.html
@@ -5,24 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aditya Mallick | Portfolio</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 <link rel="stylesheet" href="style.css">
-<script src="https://kit.fontawesome.com/5d8ce96b02.js" crossorigin="anonymous"></script>
+
 
 <body>
 
     <nav class="navbar">
         <div class="navdiv">
             <div class="logo">
-                <i class="bi bi-anthropic" style="color: rgb(229, 233, 220);"></i><span
-                    style="font-size: 35px;">DITYA</span>
+                <span>ADITYA</span>
             </div>
             <ul class="links">
+                <li><button><a href="#one">Home</a></button></li>
                 <li><button><a href="#about" class="about-btn">About</a></button></li>
-                <li><button><a href="#">Skills</a></button></li>
-                <li><button><a href="#">Projects</a></button></li>
-                <li><button><a href="#">Experience</a></button></li>
+                <li><button><a href="#two">Skills</a></button></li>
+                <li><button><a href="#three">Projects</a></button></li>
+                <li><button><a href="#four">Experience</a></button></li>
             </ul>
         </div>
     </nav>
@@ -58,7 +58,7 @@ and industry professionals. Let’s build something amazing together!
         </div>
     </div>
 
-    <section class="first">
+    <section class="first" id="one">
 
         <div class="intro">
             <p id="hello">Hey there,</p>
@@ -68,11 +68,12 @@ and industry professionals. Let’s build something amazing together!
             <p id="prof">DJANGO DEVELOPER</p>
 
             <br>
-
-            <a href="https://github.com/Adittyaaa-codes" target="_blank"><i class="bi bi-github"></i></a>
-            <a href="https://www.linkedin.com/in/aditya-mallick-7836692b6/" target="_blank"><i class="bi bi-linkedin"
-                    style="color: #0077B5"></i></a>
-            <a href="" target="_blank"><i class="bi bi-twitter-x" style="color: white"></i></a>
+            <div class="icons">
+            <a href="https://github.com/Adittyaaa-codes" target="_blank" style="text-decoration: none;"><i class="bi bi-github"></i></a>
+            <a href="https://www.linkedin.com/in/aditya-mallick-7836692b6/" target="_blank"><i class="bi bi-linkedin" style="color: #0077B5"></i></a>
+            <a href="https://x.com/Adittyaaa_Mk" target="_blank"><i class="bi bi-twitter-x" style="color: white"></i></a>
+            <a href="mailto:aditya.mallick.1512@gmail.com" target="_blank" style="text-decoration: none;"><i class="bi bi-envelope-at" style="color: tomato"></i></a>
+            </div>
 
         </div>
 
@@ -82,6 +83,7 @@ and industry professionals. Let’s build something amazing together!
 
     <hr style="max-width: 90vw;">
 
+    <section id="two">
     <div class="skills">
         <H2>SKILLS</H2>
     </div>
@@ -91,11 +93,21 @@ and industry professionals. Let’s build something amazing together!
 
         <h2 style="padding-left: 70px ; color:antiquewhite">PROGRAMMING LANGUAGES</h2>
         <hr style="width: 90vw;">
-        
+        <div class="skillIcons">
+        <i class="bi bi-filetype-html" style="color: orange; font-size: 2.5em"></i>
+        </div>
+        <h2 style="padding-left: 70px ; color:antiquewhite">FRAMEWORKS</h2>
+        <hr style="width: 90vw;">
+        <div class="skillIcons">
+
+        </div>
+        <h2 style="padding-left: 70px ; color:antiquewhite">OTHERS</h2>
+        <hr style="width: 90vw;">
     </div>
+    </section>
 
 
-
+    <section id="three">
     <div class="project">
         <H2>PROJECTS</H2>
     </div>
@@ -103,9 +115,10 @@ and industry professionals. Let’s build something amazing together!
     <div class="prdisplay">
 
     </div>
+    </section>
 
 
-
+    <section id="four">
     <div class="ex">
         <H2>EXPERIENCES</H2>
     </div>
@@ -113,7 +126,18 @@ and industry professionals. Let’s build something amazing together!
     <div class="exdisplay">
 
     </div>
-
+    </section>
 </body>
+
+<br>
+<br>
+<br>
+<br>
+
+<footer>
+    <div class="footer">
+        
+    </div>
+</footer>
 
 </html>
