--- a/basics/index.html
+++ b/basics/index.html
@@ -94,8 +94,11 @@ and industry professionals. Let’s build something amazing together!
         <h2 style="padding-left: 70px ; color:antiquewhite">PROGRAMMING LANGUAGES</h2>
         <hr style="width: 90vw;">
         <div class="skillIcons">
-        <i class="bi bi-filetype-html" style="color: orange; font-size: 2.5em"></i>
+            <img src="../images/Python-logo-notext.svg.png" alt="Python" style="border: solid 5px green;">
+            <img src="../images/java.svg" alt="Java" style="border: solid 5px green;">
+            <img src="../images/HTML5_logo_and_wordmark.svg.png" alt="HTML" style="border: solid 5px rgba(146, 146, 27, 0.947);">
         </div>
+        
         <h2 style="padding-left: 70px ; color:antiquewhite">FRAMEWORKS</h2>
         <hr style="width: 90vw;">
         <div class="skillIcons">
