--- a/basics/index.html
+++ b/basics/index.html
@@ -108,7 +108,7 @@ and industry professionals. Let’s build something amazing together!
                 <img src="../images/mysql.svg" alt="MySQL" style="border: solid 5px rgba(146, 146, 27, 0.947);">
             </div>
 
-            <h2 style="padding-left: 70px ; color:antiquewhite">FRAMEWORKS</h2>
+            <h2 style="padding-left: 70px ; color:antiquewhite">FRAMEWORKS/LIBRARIES</h2>
             <hr style="width: 90vw;">
             <div class="skillIcons">
                 <img src="../images/django.svg" alt="Python" style="border: solid 5px green;">
@@ -116,12 +116,12 @@ and industry professionals. Let’s build something amazing together!
                     style="border: solid 5px rgba(146, 146, 27, 0.947);">
             </div>
 
-            <h2 style="padding-left: 70px ; color:antiquewhite">OTHERS</h2>
+            <h2 style="padding-left: 70px ; color:antiquewhite">TOOLS</h2>
             <hr style="width: 90vw;">
             <div class="skillIcons otherlogos">
                 <img src="../images/code-stable.png" alt="VsCode" style="background-color: transparent;">
-                <img src="../images/github.png" alt="GitHub" style="background-color: transparent;">
-                <img src="../images/IntelliJ_IDEA_Icon.svg.png" alt="IntelliJ" style="background-color: transparent;">
+                <img src="../images/git-icon-logo.svg" alt="GitHub" style="background-color: transparent;">
+                <img src="../images/PyCharm_Icon.svg.png" alt="PyCharm" style="background-color: transparent;">
                 <img src="../images/Jupyter_logo.svg.png" alt="Jupyter" style="background-color: transparent;">
                 <img src="../images/Microsoft_Excel_2013-2019_logo.svg.png" alt="Excel"
                     style="background-color: transparent;">
