--- a/basics/index.html
+++ b/basics/index.html
@@ -9,6 +9,15 @@
 </head>
 <link rel="stylesheet" href="style.css">
 
+<script>
+    const hamburger = document.getElementById('hamburger');
+    const navLinks = document.getElementById('nav-links');
+
+    hamburger.addEventListener('click', () => {
+        navLinks.classList.toggle('active');
+    });
+</script>
+
 
 <body>
 
@@ -17,7 +26,8 @@
             <div class="logo">
                 <span>ADITYA</span>
             </div>
-            <ul class="links">
+            <button class="hamburger" id="hamburger">&#9776;</button>
+            <ul class="links" id="nav-links">
                 <li><button><a href="#one">Home</a></button></li>
                 <li><button><a href="#about" class="about-btn">About</a></button></li>
                 <li><button><a href="#two">Skills</a></button></li>
@@ -26,6 +36,7 @@
             </ul>
         </div>
     </nav>
+
 
     <div id="about" class="about-overlay">
         <a href="#" class="close-btn">×</a>
@@ -80,8 +91,12 @@ and industry professionals. Let’s build something amazing together!
             </div>
 
         </div>
-
-        <a href="AdityaDP.jpg" target="blank"><img src="AdityaDP.jpg" alt="profilepic" class="pp"></a>
+        <div class="profile-pic-wrapper">
+            <a href="AdityaDP.jpg" target="blank">
+                <img src="AdityaDP.jpg" alt="profilepic" class="pp">
+            </a>
+        </div>
+        <!-- <a href="AdityaDP.jpg" target="blank"><img src="AdityaDP.jpg" alt="profilepic" class="pp"></a> -->
 
     </section>
 
@@ -95,9 +110,9 @@ and industry professionals. Let’s build something amazing together!
         <div class="skdisplay">
             <h5><span class="dot yellow"></span> BASIC | <span class="dot green"></span> STRONG</h5>
 
-            <h2 style="padding-left: 70px ; color:antiquewhite">PROGRAMMING LANGUAGES</h2>
-            <hr style="width: 90vw;">
-            <div class="skillIcons">
+            <h2 style="text-align:center ; color:antiquewhite; text-decoration:underline">PROGRAMMING LANGUAGES</h2>
+            <!-- <hr style="width: 90vw;"> -->
+            <div class="skillIcons" style="display: flex; justify-content:center">
                 <img src="../images/Python-logo-notext.svg.png" alt="Python" style="border: solid 5px green;">
                 <img src="../images/java.svg" alt="Java" style="border: solid 5px green;">
                 <img src="../images/C_Programming_Language.svg.png" alt="C" style="border: solid 5px green;">
@@ -108,17 +123,17 @@ and industry professionals. Let’s build something amazing together!
                 <img src="../images/mysql.svg" alt="MySQL" style="border: solid 5px rgba(146, 146, 27, 0.947);">
             </div>
 
-            <h2 style="padding-left: 70px ; color:antiquewhite">FRAMEWORKS/LIBRARIES</h2>
-            <hr style="width: 90vw;">
-            <div class="skillIcons">
+            <h2 style="text-align:center; color:antiquewhite; text-decoration:underline">FRAMEWORKS/LIBRARIES</h2>
+            <!-- <hr style="width: 90vw;"> -->
+            <div class="skillIcons" style="display: flex; justify-content:center">
                 <img src="../images/django.svg" alt="Python" style="border: solid 5px green;">
                 <img src="../images/numpy-svgrepo-com.svg" alt="NumPy"
                     style="border: solid 5px rgba(146, 146, 27, 0.947);">
             </div>
 
-            <h2 style="padding-left: 70px ; color:antiquewhite">TOOLS</h2>
-            <hr style="width: 90vw;">
-            <div class="skillIcons otherlogos">
+            <h2 style="text-align:center; color:antiquewhite; text-decoration:underline">TOOLS</h2>
+            <!-- <hr style="width: 90vw;"> -->
+            <div class="skillIcons otherlogos" style="display: flex; justify-content:center">
                 <img src="../images/code-stable.png" alt="VsCode" style="background-color: transparent;">
                 <img src="../images/git-icon-logo.svg" alt="GitHub" style="background-color: transparent;">
                 <img src="../images/PyCharm_Icon.svg.png" alt="PyCharm" style="background-color: transparent;">
@@ -146,9 +161,18 @@ and industry professionals. Let’s build something amazing together!
                     nulla. Commodi quas reprehenderit sit lipsa.</p>
             </div>
 
-            <!-- <div class="projectcard">
-            
-        </div> -->
+            <div class="projectcard">
+                <img src="../pro_images/Screenshot 2025-05-22 223011.png" alt="project image">
+                <h3>SELF-PORTFOLIO</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum inventore voluptas quod dolores in
+                    ullam voluptate consequatur nisi modi quae aliquid cumque libero, possimus dolore odit nam commodi
+                    eos nihil. Dolores vel accusantium facere aliquam quod possimus, quidem ipsa error sint corporis
+                    totam dolorem consequatur nobis, reiciendis accusamus tempore eum natus impedit iure? Asperiores,
+                    nulla. Commodi quas reprehenderit sit lipsa.</p>
+            </div>
+
+
+
         </div>
 
     </section>
@@ -163,7 +187,7 @@ and industry professionals. Let’s build something amazing together!
             <div class="card-content">
                 <img src="../pro_images/search--v4.png" alt="Logo" class="card-logo">
                 <pre class="card-text">
-    No formal experience yet, but I’m eager to learn, build, and grow.
+    No formal experience yet, 
     I'm actively looking for opportunities where I can contribute, gain real-world experience,
     and continue developing my skills with passion and purpose.
                 </pre>
@@ -182,14 +206,37 @@ and industry professionals. Let’s build something amazing together!
 
 <footer>
     <div class="footer" style="color: grey;">
-        <h4 style="text-decoration: underline;">EDUCATION</h4>
-        <pre style="font-size: 1.2em;">
+        <div class="parent">
+            <div class="fdiv1">
+                <h4 style="text-decoration: underline;">EDUCATION</h4>
+                <pre style="font-size: 1.2em;">
 Pursuing Computer Science And Engineering (Artificial Intelligence) in 
 <a href="https://www.gita.edu.in/" target="_blank" style="text-decoration:none; color:grey">GITA Autonomous College Janla, 
 Badaraghunathpur, Bhubaneswar, Odisha 752054</a>
+             </div>
+
+        <div class="div2"> 
+            <h4 style="text-decoration: underline;">CONTACT</h4>
+            <pre style="font-size: 1.2em;" >
+<a href="mailto:aditya.mallick.1512@gmail.com" style="text-decoration:none; color:grey;">@email:-aditya.mallick.1512@gmail.com</a>
+Phone Number:- 9937919954
         </pre>
-        <a href=""></a>
+            </div>
+
+            <div class="div3">
+                </pre>
+                <div style="
+        padding:0%;
+        margin:0%;
+        text-align:center
+        ">
+                    <pre>&copy; 2023 Aditya Mallick. All Rights Reserved.</pre>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
 </footer>
+
 
 </html>
