--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
         <a href="#" class="close-btn">×</a>
         <div class="about-content">
             <!-- <h2 style="font-size:xx-large; text-decoration:underline;">About Me</h2> -->
-            <pre style="font-size: x-large;">👋 Hi, I'm Aditya Mallick
+            <p style="font-size: x-large;">👋 Hi, I'm Aditya Mallick
 🎓 A second-year Computer Science Engineering student and a passionate Django Developer with a strong
-interest in AI and Full-Stack Development.
+interest in AI and Full-Stack Development. 
 
 💡 I love exploring new technologies, solving real-world problems, and constantly pushing my boundaries
 as a developer. I'm currently seeking opportunities to gain hands-on experience through internships or
-collaborative projects where I can learn, grow, and contribute.
+collaborative projects where I can learn, grow, and contribute. 
 
 🚀 What drives me?
 A deep curiosity, a never-ending enthusiasm to learn, and the desire to build meaningful tech that makes
-an impact.
+an impact. 
 
 🔧 Tech Skills:-
 🐍 Python
@@ -70,12 +70,12 @@ an impact.
 🖥️ HTML & CSS
 🗃️ SQL
 ☕ Java
-💻 C/C++
+💻 C/C++ <
 
 Thank you for visiting my profile!
 I truly appreciate your time and interest. I’m always open to connecting, collaborating, or learning from fellow developers
 and industry professionals. Let’s build something amazing together!
-</pre>
+</p>
         </div>
     </div>
 
