--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <a href="#" class="close-btn">×</a>
         <div class="about-content">
             <!-- <h2 style="font-size:xx-large; text-decoration:underline;">About Me</h2> -->
-            <p style="font-size: x-large;">👋 Hi, I'm Aditya Mallick
+            <pre style="font-size: x-large;">👋 Hi, I'm Aditya Mallick
 🎓 A second-year Computer Science Engineering student and a passionate Django Developer with a strong
 interest in AI and Full-Stack Development. 
 
@@ -75,7 +75,7 @@ an impact.
 Thank you for visiting my profile!
 I truly appreciate your time and interest. I’m always open to connecting, collaborating, or learning from fellow developers
 and industry professionals. Let’s build something amazing together!
-</p>
+</pre>
         </div>
     </div>
 
