--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
 
 
 <body>
-
+    
     <nav class="navbar">
         <div class="navdiv">
             <div class="logo">
-                <span>ADITYA</span>
+                <!-- <span><img src="images\Picsart_25-06-11_20-11-31-371 (1).png" alt="Aditya" style="width:80px"></span> -->
+                 <span style="font-family:cursive">Aditya</span>
             </div>
             <button class="hamburger" id="hamburger">&#9776;</button>
             <ul class="links" id="nav-links">
@@ -52,33 +53,25 @@
 
 
     <div id="about" class="about-overlay">
-        <a href="#" class="close-btn">×</a>
+        <a href="#" class="close-btn"></a>
         <div class="about-content">
             <!-- <h2 style="font-size:xx-large; text-decoration:underline;">About</h2> -->
-            <pre style="font-size:large;">👋 Hi, I'm Aditya Mallick
-🎓 A second-year Computer Science Engineering student and a passionate Django Developer with a strong
-interest in AI and Full-Stack Development. 
-
-💡 I love exploring new technologies, solving real-world problems, and constantly pushing my boundaries
+            <p style="font-size:large;">Hi, I'm Aditya Mallick <br>
+A second-year Computer Science Engineering student and a passionate Django Developer with a strong
+interest in AI and Full-Stack Development. <br>
+<br>
+I love exploring new technologies, solving real-world problems, and constantly pushing my boundaries
 as a developer. I'm currently seeking opportunities to gain hands-on experience through internships or
-collaborative projects where I can learn, grow, and contribute. 
-
-🚀 What drives me?
+collaborative projects where I can learn, grow, and contribute. <br>
+<br>
+What drives me? <br>
 A deep curiosity, a never-ending enthusiasm to learn, and the desire to build meaningful tech that makes
-an impact. 
-
-🔧 Tech Skills:-
-🐍 Python
-🌐 Django
-🖥️ HTML & CSS
-🗃️ SQL
-☕ Java
-💻 C/C++ <
-
-Thank you for visiting my profile!
+an impact. <br>
+<br>
+Thank you for visiting my profile! <br>
 I truly appreciate your time and interest. I’m always open to connecting, collaborating, or learning from fellow developers
-and industry professionals. Let’s build something amazing together!
-</pre>
+and industry professionals. Let’s build something amazing together! <br>
+</p>
         </div>
     </div>
 
