--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         </div>
         <div class="profile-pic-wrapper">
-            <a href="AdityaDP.jpg" target="blank">
+            <a href="images/WhatsApp Image 2025-06-13 at 12.41.34_930b88ea.jpg" target="blank">
                 <img src="images/WhatsApp Image 2025-06-13 at 12.41.34_930b88ea.jpg" alt="profilepic" class="pp">
             </a>
         </div>
