--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 
         </div>
         <div class="profile-pic-wrapper">
-            <a href="AdityaDP.jpg" target="blank">
-                <img src="images/WhatsApp Image 2025-06-13 at 12.41.34_930b88ea.jpg" alt="profilepic" class="pp">
+            <a href="images/SelfProfilePic.jpg" target="blank">
+                <img src="images/SelfProfilePic.jpg" alt="profilepic" class="pp">
             </a>
         </div>
         <!-- <a href="AdityaDP.jpg" target="blank"><img src="AdityaDP.jpg" alt="profilepic" class="pp"></a> -->
