New project added

--- a/index.html
+++ b/index.html
@@ -46,17 +46,18 @@
         <div class="about-content">
             <!-- <h2 style="font-size:xx-large; text-decoration:underline;">About</h2> -->
             <p style="font-size: 1.5rem; text-align:center"><br>
-                Hi, I'm Aditya Mallick, 👋 <br> 
+                Hi, I'm Aditya Mallick, 👋 <br>
                 <br>
                 A 2nd-year Computer Science Engineering student💻 and passionate Web developer🌐<br>
                 with a strong interest in Full-Stack Development and AI. <br>
                 <br>
-  🚀 I love building real-world solutions, exploring new technologies, and constantly growing as a developer.  
-  <br><br>
-  💼 I'm actively seeking internships and projects to learn, contribute, and make a meaningful impact.  
-  <br><br>
-  🙏 Thanks for visiting my profile — let’s connect and create something amazing! 🤝
-</p>
+                🚀 I love building real-world solutions, exploring new technologies, and constantly growing as a
+                developer.
+                <br><br>
+                💼 I'm actively seeking internships and projects to learn, contribute, and make a meaningful impact.
+                <br><br>
+                🙏 Thanks for visiting my profile — let’s connect and create something amazing! 🤝
+            </p>
 
         </div>
     </div>
@@ -100,7 +101,7 @@
         </div>
 
         <div class="skdisplay">
-            <h5><span class="yellow"></span>BASIC |  <span class="green"></span>STRONG</h5>
+            <h5><span class="yellow"></span>BASIC | <span class="green"></span>STRONG</h5>
 
             <h2 style="text-align:center ; color:antiquewhite;">TECHNICAL LANGUAGES</h2>
             <hr style="width: 90vw; ">
@@ -176,7 +177,7 @@
                     <img src="../images/jupylogo.png" alt="Jupyter" style="background-color: transparent;">
                     <span class="skillName">JUPYTER</span>
                 </div>
-        
+
             </div>
         </div>
     </section>
@@ -196,14 +197,40 @@
                     <img src="../pro_images/Screenshot 2025-06-13 124801.png" alt="project image" class="card-image">
                     <div class="card-overlay">
                         <a href=""><button class="view-demo-btn">Visit ↗️</button></a>
-                        <a href="https://github.com/Adittyaaa-codes/Self-Portfolio" target="blank"><button class="view-code-btn">View Code</button></a>
+                        <a href="https://github.com/Adittyaaa-codes/Self-Portfolio" target="blank"><button
+                                class="view-code-btn">View Code</button></a>
                     </div>
                 </div>
                 <div class="card-content">
                     <h3>SELF-PORTFOLIO</h3>
-                    <p class="card-text">My first ever website  — a personal single page portfolio website built to showskill my frontend capabilities 
-                        and passion for web development. It reflects my journey as a growing developer and serves as a foundation for many 
+                    <p class="card-text">My first ever website — a personal single page portfolio website built to
+                        showskill my frontend capabilities
+                        and passion for web development. It reflects my journey as a growing developer and serves as a
+                        foundation for many
                         more projects to come.</p>
+                    <div class="tech-tags">
+                        <span class="tech-tag">HTML</span>
+                        <span class="tech-tag">CSS</span>
+                        <span class="tech-tag">JavaScript</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="projectcard" id="to-do-list">
+                <div class="card-image-container">
+                    <img src="../pro_images/Screenshot 2025-06-27 123357.png" alt="project image" class="card-image">
+                    <div class="card-overlay">
+                        <a href="https://to-do-list-gamma-seven-88.vercel.app/"><button class="view-demo-btn">Visit
+                                ↗️</button></a>
+                        <a href="https://github.com/Adittyaaa-codes/To-Do-List" target="blank"><button
+                                class="view-code-btn">View Code</button></a>
+                    </div>
+                </div>
+                <div class="card-content">
+                    <h3>TO-DO LIST</h3>
+                    <p class="card-text">A simple, elegant task manager that lets users add, complete, and delete tasks.
+                        Built with HTML, CSS, and JavaScript, it features real-time task counters, checkbox-based
+                        completion, and a responsive dark-themed UI for a smooth user experience.</p>
                     <div class="tech-tags">
                         <span class="tech-tag">HTML</span>
                         <span class="tech-tag">CSS</span>
@@ -218,11 +245,12 @@
                 </div>
 
                 <div class="card-content">
-                    <p class="card-text" style="font-size: x-large; color:grey">🔧 I’m constantly learning and building—more awesome projects will be added here soon!</p>
+                    <p class="card-text" style="font-size: x-large; color:grey">🔧 I’m constantly learning and
+                        building—more awesome projects will be added here soon!</p>
                 </div>
             </div>
 
-                        
+
 
         </div>
 
