--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 <div class="card-image-container">
                     <img src="../pro_images/Screenshot 2025-06-27 123357.png" alt="project image" class="card-image">
                     <div class="card-overlay">
-                        <a href="https://to-do-list-gamma-seven-88.vercel.app/"><button class="view-demo-btn">Visit
+                        <a href="https://to-do-list-gamma-seven-88.vercel.app/" target="blank"><button class="view-demo-btn">Visit
                                 ↗️</button></a>
                         <a href="https://github.com/Adittyaaa-codes/To-Do-List" target="blank"><button
                                 class="view-code-btn">View Code</button></a>
