--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <ul class="links" id="nav-links">
                 <li><a href="#one"><button>Home</button></a></li>
                 <li><a href="#about"><button class="about-btn">About</button></a></li>
-                <li><a href="#two"><button>Skills</button></a></li>
                 <li><a href="#projects"><button>Projects</button></a></li>
+                <li><a href="#two"><button>Skills</button></a></li>
                 <li><a href="#four"><button>Experience</button></a></li>
 
             </ul>
@@ -95,95 +95,7 @@
 
     <!-- <hr style="max-width: 90vw;"> -->
 
-    <section id="two">
-        <div class="skills">
-            <H2>SKILLS</H2>
-        </div>
-
-        <div class="skdisplay">
-            <h5><span class="yellow"></span>BASIC | <span class="green"></span>STRONG</h5>
-
-            <h2 style="text-align:center ; color:antiquewhite;">TECHNICAL LANGUAGES</h2>
-            <hr style="width: 90vw; ">
-            <div class="skillIcons" style="display: flex; justify-content:center">
-                <div class="skillInside">
-                    <img src="../images/Python-logo-notext.svg.png" alt="Python">
-                    <span class="skillName"><span class="green"></span>PYTHON</span>
-                </div>
-                <div class="skillInside">
-                    <img src="../images/HTML5_logo_and_wordmark.svg.png" alt="HTML">
-                    <span class="skillName" style="margin-top: 8px;"><span class="green"></span>HTML</span>
-                </div>
-                <div class="skillInside">
-                    <img src="../images/css-3.svg" alt="CSS">
-                    <span class="skillName"><span class="green"></span>CSS</span>
-                </div>
-                <div class="skillInside">
-                    <img src="../images/javascript (1).png" alt="MySQL">
-                    <span class="skillName" style="margin-top: 8px;"><span class="green"></span>JAVASCRIPT</span>
-                </div>
-                <div class="skillInside">
-                    <img src="../images/java.svg" alt="Java">
-                    <span class="skillName" style="margin-top: 8px;"><span class="green"></span>JAVA</span>
-                </div>
-                <div class="skillInside">
-                    <img src="../images/C_Programming_Language.svg.png" alt="C">
-                    <span class="skillName"><span class="green"></span>C</span>
-                </div>
-                <div class="skillInside">
-                    <img src="../images/ISO_C++_Logo.svg.png" alt="C++">
-                    <span class="skillName"><span class="yellow"></span>C++</span>
-                </div>
-
-
-            </div>
-
-            <br>
-            <br>
-
-            <h2 style="text-align:center; color:antiquewhite;">FRAMEWORKS/LIBRARIES</h2>
-            <hr style="width: 90vw;">
-            <div class="skillIcons" style="display: flex; justify-content:center">
-                <div class="skillInside">
-                    <img src="../images/django.svg" alt="Python">
-                    <span class="skillName"><span class="green"></span>DJANGO</span>
-                </div>
-                <div class="skillInside">
-                    <img src="../images/numpy-svgrepo-com.svg" alt="NumPy">
-                    <span class="skillName"><span class="yellow"></span>NUMPY</span>
-                </div>
-
-            </div>
-
-            <br>
-            <br>
-
-            <h2 style="text-align:center; color:antiquewhite;">TOOLS</h2>
-            <hr style="width: 90vw;">
-            <div class="skillIcons otherlogos" style="display: flex; justify-content:center">
-                <div class="skillInside">
-                    <img src="../images/code-stable.png" alt="VsCode" style="background-color: transparent;">
-                    <span class="skillName">VS CODE</span>
-                </div>
-                <div class="skillInside">
-                    <img src="../images/git-icon-logo.svg" alt="GitHub" style="background-color: transparent;">
-                    <span class="skillName">GIT</span>
-                </div>
-                <div class="skillInside">
-                    <img src="../images/PyCharm_Icon.svg.png" alt="PyCharm" style="background-color: transparent;">
-                    <span class="skillName">PYCHARM</span>
-                </div>
-                <div class="skillInside">
-                    <img src="../images/jupylogo.png" alt="Jupyter" style="background-color: transparent;">
-                    <span class="skillName">JUPYTER</span>
-                </div>
-
-            </div>
-        </div>
-    </section>
-
-
-    <section id="projects">
+    <section id="projects" style="margin-bottom:50px;">
         <div class="project">
             <h2>PROJECTS</h2>
         </div>
@@ -256,6 +168,98 @@
 
 
     </section>
+
+    <br>
+    <br>
+
+    <section id="two">
+        <div class="skdisplay">
+        <div class="skills">
+            <H2>SKILLS</H2>
+        </div>
+
+
+            <h2 style="text-align:center ; color:antiquewhite;">TECHNICAL LANGUAGES</h2>
+            <hr style="width: 90vw; ">
+            <div class="skillIcons" style="display: flex; justify-content:center">
+                <div class="skillInside">
+                    <img src="../images/Python-logo-notext.svg.png" alt="Python">
+                    <span class="skillName"></span>PYTHON</span>
+                </div>
+                <div class="skillInside">
+                    <img src="../images/HTML5_logo_and_wordmark.svg.png" alt="HTML">
+                    <span class="skillName" style="margin-top: 8px;"></span>HTML</span>
+                </div>
+                <div class="skillInside">
+                    <img src="../images/css-3.svg" alt="CSS">
+                    <span class="skillName">CSS</span>
+                </div>
+                <div class="skillInside">
+                    <img src="../images/javascript (1).png" alt="MySQL">
+                    <span class="skillName" style="margin-top: 8px;">JAVASCRIPT</span>
+                </div>
+                <div class="skillInside">
+                    <img src="../images/java.svg" alt="Java">
+                    <span class="skillName" style="margin-top: 8px;">JAVA</span>
+                </div>
+                <div class="skillInside">
+                    <img src="../images/C_Programming_Language.svg.png" alt="C">
+                    <span class="skillName">C</span>
+                </div>
+                <div class="skillInside">
+                    <img src="../images/mysql.svg" alt="C++">
+                    <span class="skillName" style="margin-top: 8px;"></span>MYSQL</span>
+                </div>
+
+
+            </div>
+
+            <br>
+            <br>
+
+            <h2 style="text-align:center; color:antiquewhite;">FRAMEWORKS/LIBRARIES</h2>
+            <hr style="width: 90vw;">
+            <div class="skillIcons" style="display: flex; justify-content:center">
+                <div class="skillInside">
+                    <img src="../images/django.svg" alt="Python">
+                    <span class="skillName"><span class="green"></span>DJANGO</span>
+                </div>
+                <div class="skillInside">
+                    <img src="../images/numpy-svgrepo-com.svg" alt="NumPy">
+                    <span class="skillName"><span class="yellow"></span>NUMPY</span>
+                </div>
+
+            </div>
+
+            <br>
+            <br>
+
+            <h2 style="text-align:center; color:antiquewhite;">TOOLS</h2>
+            <hr style="width: 90vw;">
+            <div class="skillIcons otherlogos" style="display: flex; justify-content:center">
+                <div class="skillInside">
+                    <img src="../images/code-stable.png" alt="VsCode" style="background-color: transparent;">
+                    <span class="skillName">VS CODE</span>
+                </div>
+                <div class="skillInside">
+                    <img src="../images/git-icon-logo.svg" alt="GitHub" style="background-color: transparent;">
+                    <span class="skillName">GIT</span>
+                </div>
+                <div class="skillInside">
+                    <img src="../images/PyCharm_Icon.svg.png" alt="PyCharm" style="background-color: transparent;">
+                    <span class="skillName">PYCHARM</span>
+                </div>
+                <div class="skillInside">
+                    <img src="../images/jupylogo.png" alt="Jupyter" style="background-color: transparent;">
+                    <span class="skillName">JUPYTER</span>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+
+    
 
 
     <section id="four">
